# aoc20

./: .ghci  .gitignore  CHANGELOG.md  aoc20.cabal
inputs/: day01a.txt  day02a.txt  day04a.txt  day05a.txt
src/: AoC.hs
src/AoC/: BST.hs  Parse.hs
src/Days/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs
