cabal-version:      2.4
name:               aoc20
version:            1.0.0
build-type:         Simple
synopsis:           Advent of Code 2020
description:        Advent of Code 2020
homepage:           https://github.com/sondr3/aoc20/
license:            MIT
license-file:       LICENSE
author:             Sondre Nilsen
maintainer:         nilsen.sondre@gmail.com
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/sondr3/aoc20.git

common config
  default-language: Haskell2010  
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  build-depends:
    , base        ^>=4.14.1.0
    , containers  ^>=0.6.4.1
    , megaparsec  ^>=9.0.1
    , split       ^>=0.2.3.4
    , text        ^>=1.2.3.2

library
  import:          config
  hs-source-dirs:  src
  exposed-modules: AoC
  other-modules:
    AoC.BST
    AoC.Parse

test-suite aoc20-test
  import:             config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover ^>=2.7.4
  build-depends:
    , aoc20
    , hspec             ^>=2.7.4
    , hspec-megaparsec  ^>=2.2.0
